--- a/THE BARRACKS.html
+++ b/THE BARRACKS.html
@@ -28,7 +28,7 @@
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="ARCHIVE.html">ARCHIVE</a></li>
-            <li><a href="ABOUT.html">CONTACT</a></li>
+            <li><a href="ABOUT.html">ABOUT</a></li>
         </ul>
     </div>
     <header>
