--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WIC</title>
+    <title>WHILE I'M CONSCIOUS (WIC)</title>
     <link rel="stylesheet" href="style.css">
     <link href=FOOTAGE/favicon.png rel=icon type=image/png>
     <link rel="preconnect" href="https://fonts.googleapis.com">
