--- a/ABOUT.html
+++ b/ABOUT.html
@@ -49,9 +49,9 @@
     <div class="left-half">
         <div class="left-content">
             <h1 class="page-title">ABOUT</h1>
-            <p class="page-subheading">November 14, 2025. 22:07</p>
+            <p class="page-subheading">November 17, 2025. 21:29</p>
 
-            <p class="main-text"><i> "We don't create by being alive, but we do it by being conscious."</i> <br>WHILE I'M CONSCIOUS (WIC) is a media atelier founded by <a href="https://seungyujung.com" style="color: rgb(0, 0, 255); text-decoration: underline;"> Seungyu Jung Jeon</a> <br>(aka The Uncertified Publisher)<br> What started as the title of a personal journal, it branched out and touched upon different art formats to offer different perspectives through its magazine. WIC is aiming to highlight artists that convey unspoken narratives using their creative mediums.</p>
+            <p class="main-text"><i> "We don't create by being alive, but we do it by being conscious."</i> <br>WHILE I'M CONSCIOUS (WIC) is an art media atelier founded by <a href="https://seungyujung.com" style="color: rgb(0, 0, 255); text-decoration: underline;"> Seungyu Jung Jeon</a> <br>(aka The Uncertified Publisher)<br> What started as the title of a personal journal, it branched out and touched upon different art formats to offer different perspectives through its magazine. WIC is aiming to highlight unseen artists that convey unspoken narratives using their creative mediums.</p>
             <p class="main-text"> 
             <p class="main-text"> 
                 For all requests, contact at: 
